ash: makes WmNativeWidgetAura override GetMinimumSize()

And calls to aura::client::kMinimumSize. This way, if a client removes the
standard frame (the client is drawing the non-client area) the min size is
honored.

BUG=920023
TEST=covered by test

Change-Id: Ib653cf6b2d64c4d53199c5137faa2747171cf902
Reviewed-on: https://chromium-review.googlesource.com/c/1401618
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621165}
Former-commit-id: 8d2e4ecfaa1f62cf8e086e2cc68c635ec8bffcd9